# aria-rs

./: Cargo.toml  README.md  renovate.json
.github/workflows/: ci.yml  lint.yml  release.yml  rustfmt.yml  test.yml
src/: cli.rs  duration.rs  main.rs
