[package]
name = "aria-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "3.2.25", features = ["derive"] }
chrono =  "0.4.41"
chrono-tz = "0.10.3"
log = "0.4.27"
env_logger = "0.11.8"
date_component = "0.4.3"